@@ -32,6 +32,7 @@ Some changes are not backward compatible and may require code change in the proj
 ** Use Server/configFiles/log4j2.xml (instead of log4j.properties)
 ** Wrq2SqlServlet has restricted access permissions now requiring bcdAdmin:ImplementationDetails as it reveals implementation details (actual names of db objects)
 ** bindingItem skipWriteCheck attribute (to bypass subject settings write checks) was removed. Use the new mode (R|W|RW) attribute on SubjectFilterType instead
+** for new themes, guiStatus:bcdSideBarPin was changed to guiStatus:bcdSideBarPin-left and guiStatus:bcdSideBarPin-right in case you preset a collapsed/expanded sidebar
 
 .All versions of 3rd party libraries for runtime, are listed in
 * bcdui_dependencies.gradle for java
@@ -47,6 +48,11 @@ Some changes are not backward compatible and may require code change in the proj
 .Server:
 * new SubjectFilterType mode attribute to specify how this filter type should be enabled. on read, write of both (default)
 * fix Postgres (empty) CLOB and BLOB reading
+
+
+Layout:
+* introduced right sidebar
+* no need to add bcd__sidebar-left-collaps-toggle etc divs/classes. Specify bcdEffectCollapse class at your bcd__sidebar-*__inner element
 
 .Components:
 * Cube
